--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background: #000;
+  background: #1F1F1F;
   color: aliceblue;
   width: 100%;
   min-height: 100vh;
